[package]
name = "arara"
version = "0.1.0"
edition = "2021"

[features]
# logging
trace = ["arara_ecs/trace", "arara_app/trace", "arara_render/trace", "arara_logger/tracing-chrome"]

[dependencies]
# internal
arara_camera = { path = "crates/arara_camera", version = "0.1.0" }
arara_transform = { path = "crates/arara_transform", version = "0.1.0" }
arara_app = { path = "crates/arara_app", version = "0.1.0" }
arara_window = { path = "crates/arara_window", version = "0.1.0" }
arara_logger = { path = "crates/arara_logger", version = "0.1.0" }
arara_render = { path = "crates/arara_render", version = "0.1.0" }
arara_core_pipeline = { path = "crates/arara_core_pipeline", version = "0.1.0" }
arara_sprite = { path = "crates/arara_sprite", version = "0.1.0" }
arara_utils = { path = "crates/arara_utils", version = "0.1.0" }
arara_time = { path = "crates/arara_time", version = "0.1.0" }
arara_diagnostic = { path = "crates/arara_diagnostic", version = "0.1.0" }
arara_input = { path = "crates/arara_input", version = "0.1.0" }
arara_asset = { path = "crates/arara_asset", version = "0.1.0" }
arara_particle_system = { path = "crates/arara_particle_system", version = "0.1.0" }
arara_ecs = { path = "crates/arara_ecs", version = "0.1.0" }
# external
glium = "*"
image = "*"
glam = "*"
rand = "*"

[[example]]
name = "fire"
path = "examples/particle_system/fire.rs"

[[example]]
name = "firework"
path = "examples/particle_system/firework.rs"

[[example]]
name = "particles"
path = "examples/particle_system/particles.rs"

[[example]]
name = "seek"
path = "examples/steering/seek.rs"

[[example]]
name = "path_following"
path = "examples/steering/path_following/main.rs"
