[package]
name = "arara_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arara_camera = { path = "../arara_camera", version = "0.1.0" }
arara_logger = { path = "../arara_logger", version = "0.1.0" }
arara_utils = { path = "../arara_utils", version = "0.1.0" }
glium = "*"
cgmath = "*"
bevy_ecs = "*"