[package]
name = "arara_asset"
version = "0.1.0"
edition = "2021"

[features]
default = []
filesystem_watcher = ["notify"]

[dependencies]
# internal
arara_app = { path = "../arara_app", version = "0.1.0" }
arara_diagnostic = { path = "../arara_diagnostic", version = "0.1.0" }
arara_utils = { path = "../arara_utils", version = "0.1.0" }
arara_ecs = { path = "../arara_ecs", version = "0.1.0" }
# other
bevy_tasks = "0.5.0"
bevy_reflect = "0.5.0"
serde = { version = "1", features = ["derive"] }
ron = "*"
crossbeam-channel = "0.5.0"
anyhow = "1.0"
thiserror = "1.0"
downcast-rs = "1.2.0"
notify = { version = "=5.0.0-pre.10", optional = true }
parking_lot = "0.11.0"
rand = "0.8.0"
