[package]
name = "arara_ecs"
version = "0.1.0"
edition = "2021"

[features]
trace = []
event_trace = []
default = ["bevy_reflect"]

[dependencies]
# internal
arara_utils = { path = "../arara_utils", version = '0.1.0' }
ecs_macros = { path = "ecs_macros", version = "0.1.0" }
# external
bevy_reflect = { version = "0.6.0", optional = true }
bevy_tasks = { version = "0.6.0" }
async-channel = "1.6.1"
fixedbitset = "0.4.1"
fxhash = "0.2.1"
thiserror = "1.0.30"
downcast-rs = "1.2.0"
serde = "1.0.136"
parking_lot = "0.12.0"
rand = "0.8.5"

[[example]]
name = "events"
path = "examples/events.rs"

[[example]]
name = "resources"
path = "examples/resources.rs"

[[example]]
name = "change_detection"
path = "examples/change_detection.rs"
