[package]
name = "arara_internal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
arara_camera = { path = "../arara_camera", version = "0.1.0" }
arara_geometry = { path = "../arara_geometry", version = "0.1.0" }
arara_shaders = { path = "../arara_shaders", version = "0.1.0" }
arara_transform = { path = "../arara_transform", version = "0.1.0" }
