[package]
name = "arara_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arara_app = { path = "../arara_app", version = "0.1.0" }
arara_utils = { path = "../arara_utils", version = "0.1.0" }
# external
tracing-subscriber = {version = "0.3.1", features = ["registry", "env-filter"]}
tracing-chrome = { version = "0.4.0", optional = true }
tracing-log = "0.1.2"