[package]
name = "arara_particle_system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arara_app = { path = "../arara_app", version = "0.1.0" }
arara_transform = { path = "../arara_transform", version = "0.1.0" }
arara_logger = { path = "../arara_logger", version = "0.1.0" }
arara_render = { path = "../arara_render", version = "0.1.0" }
arara_geometry = { path = "../arara_geometry", version = "0.1.0" }
arara_camera = { path = "../arara_camera", version = "0.1.0" }
bevy_ecs = "*"
glam = "*"