[package]
name = "arara_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# arara
arara_app = { path = "../arara_app", version = "0.1.0" }
arara_transform = { path = "../arara_transform", version = "0.1.0" }
arara_camera = { path = "../arara_camera", version = "0.1.0" }
arara_window = { path = "../arara_window", version = "0.1.0" }
arara_utils = { path = "../arara_utils", version = "0.1.0" }
arara_asset = { path = "../arara_asset", version = "0.1.0" }
# other
bevy_ecs = "*"
bevy_reflect = "*"
glium = "*"
glam = "*"
hex = "*"
image = "*"
thiserror = "*"
anyhow = "*"
hexasphere = "*"
dyn-clone = "*"