[package]
name = "arara_render"
version = "0.1.0"
edition = "2021"

[features]
trace = []

[dependencies]
# arara
arara_app = { path = "../arara_app", version = "0.1.0" }
arara_transform = { path = "../arara_transform", version = "0.1.0" }
arara_camera = { path = "../arara_camera", version = "0.1.0" }
arara_window = { path = "../arara_window", version = "0.1.0" }
arara_utils = { path = "../arara_utils", version = "0.1.0" }
arara_asset = { path = "../arara_asset", version = "0.1.0" }
arara_ecs = { path = "../arara_ecs", version = "0.1.0" }
# other
bevy_reflect = "*"
glium = "0.31.0"
glam = "*"
hex = "*"
image = "*"
thiserror = "*"
anyhow = "*"
hexasphere = "*"
dyn-clone = "*"