[package]
name = "arara_render"
version = "0.1.0"
edition = "2021"

[features]
trace = []

[dependencies]
# arara
arara_app = { path = "../arara_app", version = "0.1.0" }
arara_transform = { path = "../arara_transform", version = "0.1.0" }
arara_camera = { path = "../arara_camera", version = "0.1.0" }
arara_window = { path = "../arara_window", version = "0.1.0" }
arara_utils = { path = "../arara_utils", version = "0.1.0" }
arara_asset = { path = "../arara_asset", version = "0.1.0" }
arara_ecs = { path = "../arara_ecs", version = "0.1.0" }
# other
bevy_reflect = "0.6.0"
glium = "0.31.0"
glam = "0.20.2"
hex = "0.4.3"
image = "0.24.1"
thiserror = "1.0.30"
anyhow = "1.0.55"
hexasphere = "7.0.0"
dyn-clone = "1.0.4"
parking_lot = "0.12.0"