[package]
name = "arara_transform"
version = "0.1.0"
edition = "2021"

[dependencies]
# arara
arara_utils = { path = "../arara_utils", version = "0.1.0" }
arara_app = { path = "../arara_app", version = "0.1.0" }
arara_ecs = { path = "../arara_ecs", version = "0.1.0" }
# other
bevy_reflect = "0.6.0"
smallvec = { version = "1.4", features = ["serde"] }
glam = "*"
