[package]
name = "arara_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.6"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
tracing = {version = "0.1.31", features = ["release_max_level_info"]}
