[package]
name = "arara_window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
arara_app = { path = "../arara_app", version = "0.1.0" }
arara_camera = { path = "../arara_camera", version = "0.1.0" }
arara_logger = { path = "../arara_logger", version = "0.1.0" }
arara_time = { path = "../arara_time", version = "0.1.0" }
# other
log = "*"
bevy_ecs = "*"
glium = "*"